# audiotag

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  python-publish.yml  tests.yml
audiotag/: audiotag.py
completion/: audiotag.bash
pytagger/: pytagger.py
src/audiotag/: audiotag.py  modes.py  styles.py  track.py  util.py
src/audiotag/config/: __init__.py
tests/: conftest.py  fixtures.py  test_modes.py  test_track.py  test_util.py
tests/testdata/: noise.opus
typings/taglib/: __init__.pyi
