[metadata]
name = audiotag
version = 0.4.3
description = A simple CLI audio tagger
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Simon Rose
author_email = mail@popkornium18.de
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: End Users/Desktop

[options]
packages =
    audiotag
scripts =
    bin/audiotag
install_requires =
    pytaglib
extra_require =
    gnureadline
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
audiotag = py.typed

[flake8]
max-line-length = 100
